<resources>
    <string name="app_name">Shopbel</string>
    <string name="title_login">Login</string>
    <string name="title_register">Registration</string>
    <string name="title_products">Products</string>
    <string name="title_order">Orders</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Shopbel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_login">"Email: "</string>
    <string name="label_password">"Password: "</string>
    <string name="label_fio">"Fio: "</string>
    <string name="login">"Email"</string>
    <string name="password">"Password"</string>
    <string name="fio">"Fio"</string>
    <string name="order">"Order"</string>
    <string name="add">"Add to cart"</string>
    <string name="login_successful">"Loged in!"</string>
    <string name="error">"Something went wrong!"</string>
    <string name="order_created">"Order is paid!"</string>
    <string name="order_text">"Order"</string>
    <string name="registration_complete">"Registration complete!"</string>
    <string name="invalid_quantity">"Invalid quantity!"</string>
    <string name="registration_error">"Registration error! "</string>
    <string name="products">" products"</string>
    <string name="quantity">"Quantity: "</string>
    <string name="product_sum">"%1$.2f BYN"</string>
    <string name="product_type">"for %1$d %2$s"</string>
    <string name="price">"Price: "</string>
</resources>