<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintVertical_weight="2.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/header"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_label"
                style="@style/SumBonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/login"
                style="@style/SubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                app:layout_constraintStart_toEndOf="@id/login_label"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/password_label"
                style="@style/SumBonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_label"/>

            <TextView
                android:id="@+id/password"
                style="@style/SubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                app:layout_constraintStart_toEndOf="@id/password_label"
                app:layout_constraintTop_toBottomOf="@id/login_label" />

            <TextView
                android:id="@+id/fio_label"
                style="@style/SumBonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <TextView
                android:id="@+id/fio"
                style="@style/SubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fio"
                app:layout_constraintStart_toEndOf="@id/fio_label"
                app:layout_constraintTop_toBottomOf="@id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/history_recycle_view"
        app:layout_constraintVertical_weight="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="6"
        tools:listitem="@layout/history_list_item" />
</androidx.constraintlayout.widget.ConstraintLayout>